Fix for overflow in activities

--- a/styles/default.css
+++ b/styles/default.css
@@ -336,6 +336,8 @@ input[type=search]::-webkit-search-results-decoration {
     right: 10px;
     top: 10px;
     min-width: 200px;
+    max-height: 90%;
+    overflow: hidden;
 }
 #top .notifications li {
     position: relative;
